--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <div class="mt-4">
                     <p class="flex items-center text-yellow-500 text-xl">Follow me : <span class="ml-4"><a
                                 class="w-[30px] h-[30px] flex justify-center items-center text-yellow-500 border-yellow-500 hover:bg-yellow-500 hover:text-white border rounded-full"
-                                href="https://www.facebook.com/sazzad.ahmed.5439/"><i
+                                href="https://www.facebook.com/sazzad.ahmed.5439/" target="_blank"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
                         <span class="ml-4"><a
                                 class="w-[30px] h-[30px] flex justify-center items-center text-yellow-500 border-yellow-500 hover:bg-yellow-500 hover:text-white border rounded-full"
-                                href="https://github.com/sazzad46031"><i class="fa-brands fa-github"></i></a></span>
+                                href="https://github.com/sazzad46031" target="_blank"><i class="fa-brands fa-github"></i></a></span>
                         <span class="ml-4"><a
                                 class="w-[30px] h-[30px] flex justify-center items-center text-yellow-500 border-yellow-500 hover:bg-yellow-500 hover:text-white border rounded-full"
-                                href="https://www.linkedin.com/in/sazzad-ahmed-6613a62a4/"><i
+                                href="https://www.linkedin.com/in/sazzad-ahmed-6613a62a4/" target="_blank"><i
                                     class="fa-brands fa-linkedin-in"></i></a></span>
                     </p>
                 </div>
