--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </ul>
                 </nav>
                 <button class="btn btn-outline lg:btn-sm btn-xs btn-warning ml-2 md:ml-4 lg:ml-8"><a
-                        href="images/portfolio.jpg" download="my-resume.jpg">Resume</a></button>
+                        href="Public/Resume-of-Sazzad-Ahmed.pdf" download="my-resume.pdf">Resume</a></button>
             </div>
         </div>
     </header>
