--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <section>
         <footer class="footer footer-center p-8 bg-black text-base-content">
             <aside>
-                <p class="text-white">Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+                <p class="text-white">Copyright © 2023 - All right reserved by Sazzad Ahmed</p>
             </aside>
         </footer>
     </section>
